--- a/view/base/web/css/bs-layout.css
+++ b/view/base/web/css/bs-layout.css
@@ -43,6 +43,9 @@
     --mobile-pricebar-height: 0px;
     --mobile-pricebar-border-width: 0px;
     --mobile-pricebar-padding: 0px;
+
+    --printess-font-size-normal: 14px;
+    /*var(--small-font-size); /* for categorie buttons */
 }
 
 body.has-mobile-page-bar {
@@ -217,6 +220,10 @@ body {
     grid-column-gap: 0px;
 }
 
+#desktop-pagebar.big.extra {
+    grid-template-columns: auto 365px;
+}
+
 #printess-desktop-grid.main-tabs #desktop-pagebar.big {
     grid-column: 1/5 !important;
 }
@@ -243,6 +250,14 @@ body {
     border-left: 1px solid gray;
 }
 
+#desktop-pagebar.big.extra .big-gradient2 {
+    width: 365px;
+}
+
+#desktop-pagebar.big.extra .big-gradient {
+    width: 539px;
+}
+
 #desktop-pagebar.big .pagination {
     margin: 0;
     padding: 0;
@@ -261,6 +276,8 @@ body {
     display: grid;
     grid-template-rows: 22px 72px;
     grid-template-columns: auto;
+    align-items: center;
+    justify-items: center;
     height: 94px;
     cursor: pointer;
     overflow: hidden;
@@ -310,11 +327,26 @@ body {
     position: relative;
 }
 
+.big-page-thumb>.duplicate-icon {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    right: -1px;
+    bottom: -1px;
+    background-color: var(--bs-primary);
+    padding: 3px;
+    border-radius: 6px 0 0 0;
+    color: white;
+    cursor: pointer;
+}
+
 .big-page-item>.big-page-caption {
     padding-bottom: 2px;
     text-align: center;
     color: #666;
     font-size: 10pt;
+    justify-self: stretch;
+    white-space: nowrap;
 }
 
 .corner-tools {
@@ -390,21 +422,38 @@ body {
 }
 
 .corner-tools.expert-mode .undo-redo-bar,
+.corner-tools.load-mode .undo-redo-bar,
 .corner-tools.save-mode .undo-redo-bar {
     grid-template-columns: auto auto auto 1fr auto;
 }
 
-.corner-tools.expert-mode.save-mode .undo-redo-bar {
+.corner-tools.expert-mode.save-mode .undo-redo-bar,
+.corner-tools.expert-mode.load-mode .undo-redo-bar {
     grid-template-columns: auto auto auto 1fr 1fr auto;
 }
 
+.corner-tools.expert-mode.save-mode.load-mode .undo-redo-bar {
+    grid-template-columns: auto auto auto 1fr 1fr auto auto;
+}
+
 .corner-tools.expert-mode .allow-zoom-and-pan.undo-redo-bar,
+.corner-tools.load-mode .allow-zoom-and-pan.undo-redo-bar,
 .corner-tools.save-mode .allow-zoom-and-pan.undo-redo-bar {
     grid-template-columns: auto auto auto auto auto auto;
 }
 
-.corner-tools.expert-mode.save-mode .allow-zoom-and-pan.undo-redo-bar {
+.corner-tools.load-mode.save.mode .allow-zoom-and-pan.undo-redo-bar,
+.corner-tools.expert-mode.save-mode .allow-zoom-and-pan.undo-redo-bar,
+.corner-tools.expert-mode.load-mode .allow-zoom-and-pan.undo-redo-bar {
     grid-template-columns: auto auto auto auto auto auto auto;
+}
+
+.corner-tools.expert-mode.save-mode.load-mode {
+    width: 345px;
+}
+
+.corner-tools.expert-mode.save-mode.load-mode .allow-zoom-and-pan.undo-redo-bar {
+    grid-template-columns: auto auto auto auto auto auto auto auto;
 }
 
 .modify-page-buttons {
@@ -413,6 +462,7 @@ body {
     white-space: nowrap;
     justify-content: space-evenly;
     align-items: center;
+    align-self: normal;
 }
 
 
@@ -1356,6 +1406,8 @@ ul.progress-steps {
     background-color: var(--bs-primary);
 }
 
+
+
 .mobile-upload-success-icon {
     width: 250px;
     height: 200px;
@@ -1429,6 +1481,16 @@ ul.progress-steps {
 
 #validation-modal .modal-dialog {
     min-width: 450px;
+}
+
+#lettergenerator-modal .modal-dialog {
+    max-width: 90%;
+    width: 90%;
+    height: 90%;
+}
+
+#lettergenerator-modal .modal-content {
+    height: 100%;
 }
 
 #pageArrangementDialog .modal-dialog,
@@ -1933,6 +1995,12 @@ li.spread-separator {
     margin-bottom: 3px;
 }
 
+.snippet-label {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
 .snippet-price-box {
     position: absolute;
     bottom: -4px;
@@ -2072,7 +2140,7 @@ label>span {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: left;
+    justify-content: space-between;
     margin-top: 0.25rem;
 }
 
@@ -2109,6 +2177,7 @@ input[type='text'] {
     color: #8f8f8f;
 }
 
+.desktop-properties>*,
 #desktop-properties>* {
     margin-bottom: 10px;
 }
@@ -2426,6 +2495,16 @@ div.big:hover>.delete-btn-container {
     display: block;
 }
 
+
+.splitter-content-snippet {
+    width: 102px;
+    height: 102px;
+    cursor: pointer;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .image-filter-snippet {
     width: 102px;
     height: 102px;
@@ -2477,6 +2556,35 @@ label.form-check-label {
 input#invert-image-checker {
     cursor: pointer;
 }
+.invert-image-checker-container {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 0.7em;
+    align-items: flex-end;
+    justify-items: center;
+    padding: 0 0.7em;
+}
+.invert-image-checker-container > label {
+    grid-column: 1/3;
+    width: 100% !important;
+    font-size: 10pt;
+    padding-top: 4px;
+}
+
+.invert-image-checker-svg {
+    width: 36px;
+    height: 36px;
+    cursor: pointer;
+    color: var(--bs-secondary);
+}
+.invert-image-checker-svg.selected {
+    color: var(--bs-primary);
+}
+.invert-image-checker-svg:hover {
+    filter: brightness(120%);
+}
+
 
 .form-check-input:checked {
     background-color: var(--bs-primary);
@@ -2703,15 +2811,18 @@ input#invert-image-checker {
     text-overflow: ellipsis;
 }
 
-.disabled > .dropdown-item, .image-select-list > .disabled {
+.disabled>.dropdown-item,
+.image-select-list>.disabled {
     opacity: 0.5;
     pointer-events: none;
     cursor: not-allowed;
 }
+
 a.dropdown-item .dropdown-list-info {
     white-space: pre-line;
 }
 
+.desktop-properties .dropdown-toggle.full-width::after,
 #desktop-properties .dropdown-toggle.full-width::after {
     /* tweaking the bootstrap class for 100% width controls */
     position: absolute;
@@ -2864,6 +2975,12 @@ a.dropdown-item .dropdown-list-info {
     margin-top: 2px;
 }
 
+.modal-content .desktop-properties {
+    width: calc(100vw - 4.6rem);
+    height: calc(100vh - 10rem);
+}
+
+.desktop-properties .color-drop-down-list .btn-color-select:after,
 #desktop-properties .color-drop-down-list .btn-color-select:after {
     position: absolute;
     top: 45%;
@@ -2874,7 +2991,9 @@ a.dropdown-item .dropdown-list-info {
     color: hsl(0, 0%, var(--switch));
 }
 
-#desktop-properties .color-drop-down-list .btn-color-select {  display: flex;
+.desktop-properties .color-drop-down-list .btn-color-select,
+#desktop-properties .color-drop-down-list .btn-color-select {
+    display: flex;
     justify-content: center;
     border-radius: 50%;
     min-width: 39px;
@@ -3882,10 +4001,6 @@ body.has-mobile-price-bar .mobile-pricebar {
         max-width: 80vw;
     }
 
-    .image-placement-container {
-        justify-content: center;
-    }
-
     button.btn.image-placement-button {
         flex-direction: row;
         width: auto;
@@ -3910,6 +4025,135 @@ body.has-mobile-price-bar .mobile-pricebar {
 
     a.dropdown-item.printess-add-info {
         padding: 0px;
+    }
+
+    .desktop-properties a.dropdown-item.printess-add-info {
+        /* still have padding if rendered off canvas */
+        padding: 0.25rem 1rem;
+    }
+
+    .dropdown-menu {
+        /* only shown on mobile with ff-groups */
+        position: fixed !important;
+    }
+}
+
+/*
+ ***** Keyword Menu ****
+ */
+
+#desktop-properties.keyword-menu {
+    padding: 0px !important;
+}
+#desktop-properties.keyword-menu > * {
+    margin-bottom: 0px !important;
+}
+#desktop-properties.keyword-menu .layout-snippet-cluster {
+    padding: 10px;
+}
+
+.keyword-menu-wrapper {
+    position: sticky;
+    left: 0;
+    top: 0;
+    z-index: 99999999;
+    background-color: white;
+}
+
+.menu-image-amount-wrapper {
+    min-height: 72px;
+    padding: 10px;
+    border-bottom: 1px solid gray;
+    overflow-x: auto;
+    background: #ddd;
+}
+.image-amount {
+    white-space: nowrap;
+}
+
+.menu-image-amount-wrapper > .label {
+    font-size: var(--printess-font-size-normal);
+    padding-bottom: 5px;
+}
+.menu-image-amount-wrapper > .btn-group {
+    background-color: white;
+}
+
+.category-tabs {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 20px 0px 20px;
+    margin: 0;
+    width: 100%;
+
+    /* should only be there when scrolling */
+    /*
+     overflow-x: auto;
+    align-items: flex-end;
+    justify-content: flex-start;
+    */
+}
+
+.category-tabs>li {
+
+    border-top: 1px solid gray;
+    border-left: 1px solid gray;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    width: 100%;
+    font-size: var(--printess-font-size-big);
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    padding: 12px 5px;
+    margin-bottom: -1px;
+    font-size: var(--printess-font-size-normal);
+}
+
+.category-tabs>li.selected {
+    background: #eee;
+    border-bottom: 1px solid #eee;
+    position: relative;
+}
+
+.category-tabs>li:last-child {
+    border-right: 1px solid gray;
+}
+
+.menu-topic-wrapper {
+    align-self: center;
+    background: #eee;
+    justify-content: center;
+    display: flex;
+    padding: 19px 10px;
+    border-top: 1px solid gray;
+    flex-wrap: wrap;
+}
+
+.menu-topic-wrapper>.btn-primary {
+    background: var(--bs-primary);
+}
+
+.menu-topic-wrapper>.btn-outline-secondary {
+    background: white;
+}
+
+.menu-topic-wrapper>.btn-outline-secondary:hover {
+    background: var(--bs-secondary);
+}
+
+
+@media screen and (max-width: 600px) {
+
+
+    .options {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    select {
+        width: 80vw;
     }
 
 }
