--- a/view/base/web/css/bs-layout.css
+++ b/view/base/web/css/bs-layout.css
@@ -587,6 +587,12 @@ body {
     height: 25px;
 }
 
+.mobile-tab-nav-ok {
+    position: absolute;
+    bottom: 90px;
+    right: 5px;
+}
+
 .badge-link {
     border: 1px solid !important;
     border-color: #dee2e6 !important;
@@ -862,7 +868,7 @@ body {
 }
 
 .tabs-navigation a.nav-link {
-    word-break: break-all;
+    word-break: normal;
     width: var(--editor-toolbar-width);
     padding: 10px 8px;
     text-align: center;
@@ -910,16 +916,6 @@ body {
     display: inline-block;
 }
 
-/* .tabs-navigation li.nav-item.selected {
-  background-color: #525960;
-  color: white;
-}
-.tabs-navigation li.nav-item.selected > svg {
-  color: white;
-}
-.tabs-navigation li.nav-item.selected > a {
-  color: white;
-} */
 
 .control-group {
     display: grid;
@@ -1153,7 +1149,7 @@ body {
     }
 
     .mobile-tabs {
-        grid-template-rows: 50px 1fr 70px;
+        grid-template-rows: auto 1fr 100px;
     }
 
     .fullscreen-add-properties .image-list-header,
@@ -1217,6 +1213,7 @@ body {
         padding: 5px;
         width: fit-content;
         min-width: 80px;
+        min-height: 55px;;
     }
 
     .btn-group-vertical>.btn,
@@ -1481,16 +1478,6 @@ ul.progress-steps {
 
 #validation-modal .modal-dialog {
     min-width: 450px;
-}
-
-#lettergenerator-modal .modal-dialog {
-    max-width: 90%;
-    width: 90%;
-    height: 90%;
-}
-
-#lettergenerator-modal .modal-content {
-    height: 100%;
 }
 
 #pageArrangementDialog .modal-dialog,
@@ -1893,6 +1880,7 @@ li.spread-separator {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 10px;
 }
 
 .layout-snippet-list.accordion {
@@ -1993,6 +1981,7 @@ li.spread-separator {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 3px;
+    padding-left: 10px;
 }
 
 .snippet-label {
@@ -2556,6 +2545,7 @@ label.form-check-label {
 input#invert-image-checker {
     cursor: pointer;
 }
+
 .invert-image-checker-container {
     display: grid;
     grid-template-rows: auto 1fr;
@@ -2565,7 +2555,8 @@ input#invert-image-checker {
     justify-items: center;
     padding: 0 0.7em;
 }
-.invert-image-checker-container > label {
+
+.invert-image-checker-container>label {
     grid-column: 1/3;
     width: 100% !important;
     font-size: 10pt;
@@ -2578,9 +2569,11 @@ input#invert-image-checker {
     cursor: pointer;
     color: var(--bs-secondary);
 }
+
 .invert-image-checker-svg.selected {
     color: var(--bs-primary);
 }
+
 .invert-image-checker-svg:hover {
     filter: brightness(120%);
 }
@@ -3140,7 +3133,7 @@ a.dropdown-item .dropdown-list-info {
     top: var(--mobile-buttonbar-height);
     left: 0;
     right: 0;
-    padding: 5px 5px;
+    padding: 0;
     background-color: var(--mobile-panel-background);
     /* background-color: lavender;*/
     overflow: hidden auto;
@@ -3148,22 +3141,27 @@ a.dropdown-item .dropdown-list-info {
 
 .mobile-control-sm {
     height: 80px;
+    padding: 5px 5px;
 }
 
 .mobile-control-md {
     height: 120px;
+    padding: 5px 5px;
 }
 
 .mobile-control-lg {
     height: 160px;
+    padding: 5px 5px;
 }
 
 .mobile-control-xl {
     height: 200px;
+    padding: 5px 5px;
 }
 
 .mobile-control-xxl {
     height: 290px;
+    padding: 5px 5px;
     /* iphone keyboard size */
 }
 
@@ -4045,9 +4043,11 @@ body.has-mobile-price-bar .mobile-pricebar {
 #desktop-properties.keyword-menu {
     padding: 0px !important;
 }
-#desktop-properties.keyword-menu > * {
+
+#desktop-properties.keyword-menu>* {
     margin-bottom: 0px !important;
 }
+
 #desktop-properties.keyword-menu .layout-snippet-cluster {
     padding: 10px;
 }
@@ -4058,6 +4058,11 @@ body.has-mobile-price-bar .mobile-pricebar {
     top: 0;
     z-index: 99999999;
     background-color: white;
+    width: 100%;
+}
+
+.topic-border-bottom {
+    border-bottom: 1px solid gray;
 }
 
 .menu-image-amount-wrapper {
@@ -4067,15 +4072,17 @@ body.has-mobile-price-bar .mobile-pricebar {
     overflow-x: auto;
     background: #ddd;
 }
+
 .image-amount {
     white-space: nowrap;
 }
 
-.menu-image-amount-wrapper > .label {
+.menu-image-amount-wrapper>.label {
     font-size: var(--printess-font-size-normal);
     padding-bottom: 5px;
 }
-.menu-image-amount-wrapper > .btn-group {
+
+.menu-image-amount-wrapper>.btn-group {
     background-color: white;
 }
 
@@ -4144,7 +4151,168 @@ body.has-mobile-price-bar .mobile-pricebar {
 }
 
 
+#lettergenerator-modal .modal-dialog {
+    max-width: 900px;
+    width: 90%;
+    height: 90%;
+}
+
+#lettergenerator-modal .modal-content {
+    height: 100%;
+}
+
+
+.letter-form-group {
+    margin-bottom: 1rem;
+}
+
+.letter-label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+
+.letter-text-area {
+    padding: 15px !important;
+    background: #eee !important;
+    min-height: 350px;
+}
+
+.letter-text-input {
+    padding: 0.375rem 2.25rem 0.375rem 0.75rem !important;
+    font-size: 1rem !important;
+}
+
+.letter-modal-body {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+}
+
+.letter-writer-button {
+    text-align: center;
+    padding: 20px;
+    border: 5px dotted #ccc;
+}
+
+.letter-writer-button>button {
+    margin: 1rem 0 0 0 !important;
+}
+
+.txt-2-img-styles {
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+    flex-wrap: wrap;
+    height: 400px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    border: rgba(0, 0, 0, .125) solid grey;
+    padding: 10px;
+}
+
+.txt-2-im-style-thumb {
+    border-radius: 5px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.txt-2-img-styles>.txt-2-im-style-thumb {
+    background-position: 50% 20%;
+    background-size: 150%;
+    width: 73px;
+    height: 73px;
+    cursor: pointer;
+    opacity: 0.90;
+    border: 2px solid transparent;
+}
+
+.txt-2-im-style-thumb>span {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    background-color: #ffffffdd;
+    font-size: 11px;
+    text-align: center;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: none;
+    pointer-events: none;
+}
+
+
+
+.txt-2-img-styles>div:hover {
+    opacity: 1;
+}
+
+.txt-2-img-styles>div:hover>span,
+.txt-2-im-style-thumb.selected>span {
+    display: block;
+}
+
+.txt-2-img-styles>.selected {
+    border-color: var(--bs-primary);
+    opacity: 1;
+}
+
+
+txt-2-img-ui {
+    display: flex;
+    flex-direction: column;
+}
+
+.txt-2-img-prompt {
+    display: grid;
+    position: relative;
+    grid-template-columns: 1fr 150px;
+    grid-template-rows: auto 140px 60px auto;
+    gap: 10px;
+    align-items: stretch;
+    align-content: stretch;
+    margin-bottom: 10px;
+}
+
+.txt-2-img-prompt>p {
+    grid-column: 1/3;
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+
+.txt-2-img-prompt>textarea {
+    grid-row: 2/5;
+    resize: none;
+    height: 210px;
+}
+
+.txt-2-img-prompt > progress {
+    visibility: hidden;
+    position: absolute;
+    grid-column: 1/3;
+    width: 100%;
+    bottom: 32px;
+    left: 0;
+    right: 0;
+}
+
 @media screen and (max-width: 600px) {
+
+    .letter-modal-body {
+        display: flex;
+        flex-direction: column;
+        flex: initial;
+        height: 100%;
+    }
+
+    #lettergenerator-modal .modal-dialog {
+        max-width: 100%;
+        width: 100%;
+        height: 100%;
+        margin: 0 !important;
+    }
 
 
     .options {
